fixed padding on mobile nav

--- a/src/app/modules/admin/pages/course/course.component.scss
+++ b/src/app/modules/admin/pages/course/course.component.scss
@@ -52,7 +52,7 @@ nav {
 .link {
   display: flex;
   align-items: center;
-  gap: 01rem;
+  gap: 1rem;
   padding: 1rem 1.5rem;
   border-radius: 0.25rem;
   cursor: pointer;
@@ -93,7 +93,7 @@ span {
   left: 0;
   width: 100%;
   height: 100vh;
-  padding: 3rem 0.25rem;
+  padding: 3rem 0;
   background-color: var(--white);
   transform: translateX(-100%);
   transition: transform 300ms ease-in-out;
@@ -102,8 +102,8 @@ span {
 
 .close-icon {
   position: absolute;
-  top: 1.5rem;
-  right: 1.5rem;
+  top: 1.75rem;
+  right: 2.5rem;
   cursor: pointer;
 }
 
